황혜원 수정사항 적용 (그만 말해 황혜원)

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,11 @@
 
     main {
         @apply min-h-screen;
-        padding-bottom: 2rem;
+        padding-bottom: 4rem;
+    }
+
+    section {
+        @apply pb-8;
     }
 }
 
